# fraudnet-engine

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  alembic.ini  celerybeat-schedule  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260508_0722_baseline_schema.py  20260508_0809_initial_schema.py  20260508_0830_totp_fields_on_users.py
api/: dependencies.py  main.py  schemas.py
api/auth/: jwt.py  passwords.py  rbac.py  routes.py  totp.py
api/middleware/: audit.py
api/routes/: agents.py  alerts.py  analytics.py  campaigns.py  clusters.py  dashboard.py  integration.py  law_enforcement.py  nodes.py  rules.py  takedowns.py
api/websocket/: bridge.py  feeds.py  manager.py  metrics_loop.py  publisher.py
config/: constants.py  logging.py  settings.py
core/agents/: classification.py  geographic.py  scoring.py
core/analytics/: _graph_loader.py  anomaly.py  campaign.py  centrality.py  community.py  fund_flow.py  sleeper.py
core/evidence/: builder.py  export.py  fund_trace.py  timeline.py
core/graph/: client.py  models.py  queries.py  schema.py
core/mesh/: clustering.py  decay.py  expansion.py  maintenance.py  scoring.py  seed.py
core/ml/: evaluation.py  features.py  gnn_model.py  inference.py  training.py
core/security/: encryption.py
core/takedown/: agent_alert.py  executor.py  readiness.py  restitution.py  sim_flag.py  wallet_freeze.py
db/: models.py  session.py
docs/: FraudNet_2.0_backend_spec.md
docs/adrs/: 0001-single-fastapi-service.md  0002-neo4j-vs-memgraph.md  0003-redis-vs-aerospike.md
docs/runbooks/: api.md  consumer.md  worker.md
ingestion/enrichment/: identity_resolver.py
ingestion/kafka_consumers/: _base.py  main.py  safeguard_consumer.py  scancom_consumer.py  transaction_consumer.py
rules/: engine.py  evaluator.py
rules/actions/: agent_actions.py  escalation_actions.py  network_actions.py  registry.py  safeguard_actions.py  wallet_actions.py  webhook_actions.py
scripts/: seed_demo_data.py
tasks/: celery_app.py  mesh_tasks.py  ml_tasks.py  periodic.py  report_tasks.py
tests/test_analytics/: test_community.py
tests/test_api/: test_auth.py  test_clusters.py
tests/test_ingestion/: test_consumers.py
tests/test_mesh/: test_decay.py  test_expansion.py  test_scoring.py
tests/test_rules/: test_engine.py  test_evaluator.py
