[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudnet-engine"
version = "0.1.0"
description = "FraudNet Intelligence Engine — AI-native fraud network intelligence backend for mobile money."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "FraudNet Team" }]

dependencies = [
    # Web framework
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.32",
    "websockets>=12.0,<14",
    "python-multipart>=0.0.9",

    # Settings & validation
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",

    # Auth
    "passlib[bcrypt]>=1.7.4,<2",
    "python-jose[cryptography]>=3.3,<4",

    # Graph DB
    "neo4j>=5.20,<6",

    # Relational DB
    "sqlalchemy[asyncio]>=2.0.30,<3",
    "asyncpg>=0.29,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.13,<2",

    # Cache & queues
    "redis>=5.0,<6",
    "celery[redis]>=5.4,<6",
    "aiokafka>=0.11,<0.12",

    # Object storage
    "minio>=7.2,<8",

    # PDF generation (evidence packages)
    "reportlab>=4.0,<5",

    # ML / graph analytics
    "networkx>=3.3,<4",
    "scikit-learn>=1.5,<2",
    "numpy>=1.26,<2.2",
    "pandas>=2.2,<3",

    # Utilities
    "httpx>=0.27,<1",
    "tenacity>=8.5,<10",
    "structlog>=24.4,<26",
    "orjson>=3.10,<4",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
ml = [
    # PyTorch / PyG are heavy and platform-specific. Install separately in
    # GPU-enabled images. They are not required for the API to start.
    "torch>=2.3,<3",
    "torch-geometric>=2.5,<3",
]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<7",
    "httpx>=0.27,<1",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-python-dateutil",
    "ipython>=8.26",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api*",
    "core*",
    "config*",
    "db*",
    "ingestion*",
    "integration*",
    "law_enforcement*",
    "rules*",
    "tasks*",
    "scripts*",
]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "PL"]
ignore = ["PLR0913"]  # too-many-arguments — common in scoring functions

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires running Neo4j/Postgres/Redis (deselect with -m 'not integration')",
    "slow: marks tests as slow",
]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_return_any = true
plugins = ["pydantic.mypy"]
